interpreter/src/snapshots/tmi__tests__print.snap
---
source: interpreter/src/lib.rs
info:
  program: tmi
  args:
    - "../examples/print.tm"
    - "9"
---
success: true
exit_code: 0
----- stdout -----
9
false
hello, world

----- stderr -----
