interpreter/src/snapshots/tmi__tests__sibling_function.snap
---
source: interpreter/src/lib.rs
info:
  program: tmi
  args:
    - "../examples/sibling_function.tm"
    - "9"
---
success: true
exit_code: 0
----- stdout -----
34

----- stderr -----
