interpreter/src/snapshots/tmi__tests__structs_anon.snap
---
source: interpreter/src/lib.rs
info:
  program: tmi
  args:
    - "../examples/structs_anon.tm"
    - "9"
---
success: true
exit_code: 0
----- stdout -----
18

----- stderr -----
