interpreter/src/snapshots/tmi__tests__structs_fn.snap
---
source: interpreter/src/lib.rs
info:
  program: tmi
  args:
    - "../examples/structs_fn.tm"
    - "9"
---
success: true
exit_code: 0
----- stdout -----
Result: 81

----- stderr -----
