interpreter/src/snapshots/tmi__tests__structs_inner.snap
---
source: interpreter/src/lib.rs
info:
  program: tmi
  args:
    - "../examples/structs_inner.tm"
    - "9"
---
success: true
exit_code: 0
----- stdout -----
Result: 240

----- stderr -----
