interpreter/src/snapshots/tmi__tests__structs_nested.snap
---
source: interpreter/src/lib.rs
info:
  program: tmi
  args:
    - "../examples/structs_nested.tm"
    - "9"
---
success: true
exit_code: 0
----- stdout -----
36

----- stderr -----
