interpreter/src/snapshots/tmi__tests__structs_of_arrays.snap
---
source: interpreter/src/lib.rs
info:
  program: tmi
  args:
    - "../examples/structs_of_arrays.tm"
    - "9"
---
success: true
exit_code: 0
----- stdout -----
64

----- stderr -----
