interpreter/src/snapshots/tmi__tests__structs_simple.snap
---
source: interpreter/src/lib.rs
info:
  program: tmi
  args:
    - "../examples/structs_simple.tm"
    - "9"
---
success: true
exit_code: 0
----- stdout -----
19

----- stderr -----
